--- a/Ticketing System/view/templates/login_page.html
+++ b/Ticketing System/view/templates/login_page.html
@@ -6,4 +6,5 @@
     <button id="submit-button" type="submit" form="login-form">Login</button>
     <button id="register-button" type="button">Register</button>
 </form>
+<h1>{{status}}</h1>
 {% endblock %}
