--- a/Ticketing System/view/templates/register_page.html
+++ b/Ticketing System/view/templates/register_page.html
@@ -6,4 +6,5 @@
     <button id="submit-button" type="submit" form="register-form">Register</button>
     <button id="back-button" type="button">Back to Login</button>
 </form>
+<h1>{{status}}</h1>
 {% endblock %}
