--- a/Ticketing System/view/templates/login_page.html
+++ b/Ticketing System/view/templates/login_page.html
@@ -1,6 +1,6 @@
 {% extends "index.html" %}
 {% block login_content %}
-<form id="login-form" name="login-form" action="#">
+<form id="login-form" name="login-form" action="/auth/login" method="post">
     <input id="username-entry" name="username-entry" type="text" placeholder="Username"/>
     <input id="password-entry" name="password-entry" type="password" placeholder="Password"/>
     <button id="submit-button" type="submit" form="login-form">Login</button>
