--- a/Ticketing System/view/templates/login_page.html
+++ b/Ticketing System/view/templates/login_page.html
@@ -4,7 +4,7 @@
     <input id="username-entry" name="username-entry" type="text" placeholder="Username"/>
     <input id="password-entry" name="password-entry" type="password" placeholder="Password"/>
     <button id="submit-button" type="submit" form="login-form">Login</button>
-    <button id="register-button" onclick="window.location.href='http://127.0.0.1:5000/auth/register';" type="button">Register</button>
+    <button id="register-button" onclick="window.location.href='http://127.0.0.1:5000/auth/register';" type="button">Go to Register</button>
 </form>
 <h1>{{status}}</h1>
 {% endblock %}
